WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23606
CSS gradient not repainted when image load completes
https://bugs.webkit.org/show_bug.cgi?id=23606
Summary
CSS gradient not repainted when image load completes
Matt Lilek
Reported
2009-01-28 16:11:40 PST
If an image is inside of an element with a CSS gradient background, once the image dimensions are known and the image is loaded, the gradient is not properly repainted. See attached screenshot and testcase.
Attachments
Screenshot
(117.66 KB, image/png)
2009-01-28 16:12 PST
,
Matt Lilek
no flags
Details
Testcase
(655 bytes, text/html)
2009-01-28 16:13 PST
,
Matt Lilek
no flags
Details
Change mustRepaintFillLayers() to check for images that use their container’s size
(45.49 KB, patch)
2009-06-21 17:11 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2009-01-28 16:12:50 PST
Created
attachment 27131
[details]
Screenshot
Matt Lilek
Comment 2
2009-01-28 16:13:10 PST
Created
attachment 27132
[details]
Testcase
Mark Rowe (bdash)
Comment 3
2009-01-28 16:41:01 PST
<
rdar://problem/6537777
>
mitz
Comment 4
2009-06-21 17:11:30 PDT
Created
attachment 31626
[details]
Change mustRepaintFillLayers() to check for images that use their container’s size
mitz
Comment 5
2009-06-22 09:42:48 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/44938
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug