WebCore:

Reviewed by Simon Fraser.

        - fix https://bugs.webkit.org/show_bug.cgi?id=23606
          <rdar://problem/6537777> CSS gradient not repainted when image load
          completes

        Test: fast/repaint/background-generated.html

        * rendering/RenderObject.cpp:
        (WebCore::mustRepaintFillLayers): Return true if the layer does not
        specify a size and the image uses the container size.

LayoutTests:

        Reviewed by Simon Fraser.

        - test for https://bugs.webkit.org/show_bug.cgi?id=23606
          <rdar://problem/6537777> CSS gradient not repainted when image load
          completes

        * fast/repaint/background-generated.html: Added.
        * platform/mac/fast/repaint/background-generated-expected.checksum: Added.
        * platform/mac/fast/repaint/background-generated-expected.png: Added.
        * platform/mac/fast/repaint/background-generated-expected.txt: Added.



Canonical link: https://commits.webkit.org/36750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44938 268f45cc-cd09-0410-ab3c-d52691b4dbfc